--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -57,7 +57,7 @@ h3, h4, p, li, label {
 }
 
 input {
-    width: 15rem;
+    width: 50%;
     height: 2rem;
     text-align: center;
     background: var(--background4);
@@ -66,7 +66,7 @@ input {
 }
 
 select {
-    width: 10rem;
+    width: 60%;
     height: 2rem;
     text-align: center;
     background: var(--background4);
@@ -104,4 +104,8 @@ button:hover {
 
 button:hover::before {
     width: 100%;
+}
+
+hr {
+    border-color: var(--theme-color);
 }
